# confpay

./: .gitignore  Anchor.toml  Cargo.lock.bak  Cargo.lock.bak_v10  Cargo.lock.bak_v4  Cargo.lock.bak_v6  Cargo.lock.bak_v8  Cargo.lock.bak_v9  Cargo.toml  Cargo.toml.root.bak  GUIDE.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  verify_discriminator.js
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/employer/: page.tsx
app/employer/signup/: page.tsx
app/idl/: confpay.json
app/lib/: addEmployee.ts  anchor.ts  crypto.ts  fetchEmployee.ts  inco.ts  payment.ts  solana.ts
app/worker/: page.tsx
programs/confpay/: Cargo.toml  build_fix.sh
programs/confpay/src/: lib.rs
scripts/: verify-flow.ts
tests/: confpay.ts
