[workspace]
members = ["programs/confpay"]
resolver = "2"



[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1

[profile.release.build-override]
opt-level = "s"
incremental = false
codegen-units = 1

[patch.crates-io]
constant_time_eq = { git = "https://github.com/cesarb/constant_time_eq", tag = "0.3.1" }
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5", subdir = "crates/blake3" }

