[package]
name = "confpay"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "confpay"

[features]
no-idl = []
no-log-ix-name = []
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
ahash = "=0.8.11"
hashbrown = "=0.14.3"
blake3 = "=1.5.5"
borsh = "=1.5.1"
toml_edit = "=0.22.12"
indexmap = "=2.2.6"



